# Web-tracker

./: .gitignore  docker-compose.yml
api-service/: dependencies.py  pyproject.toml
api-service/alembic/: env.py
api-service/src/: consumer_worker.py  dependencies.py  producer_worker.py
api-service/src/api/v1/auth/: schemas.py  service.py
api-service/src/api/v1/websocket/: router.py
api-service/src/core/: __init__.py  config.py  deco_for_SQLAlchemy_exc.py  exceptions.py
api-service/src/core/exceptions/: http.py
api-service/src/core/security/: dependencies.py  security.py
api-service/src/db/: dependencies.py
api-service/src/db/infrastructure/: __init__.py  session.py
api-service/src/interfaces/: connection_manager_interface.py  db_interface.py  notification_service_interface.py  rabbit_producer_interface.py
api-service/src/rabbitmq/: dependencies.py  rabbit_connection.py  rabbit_consumer.py  rabbit_publisher.py
api-service/src/user/: __init__.py  model.py  repository.py  schemas.py  service.py
api-service/src/websocket/: connection_manager.py  dependencies.py
tracker-service/: alembic.ini  main.py  pyproject.toml
tracker-service/alembic/: env.py
tracker-service/alembic/versions/: 2026_04_13_1510-eccc189bd02c_initial.py
tracker-service/alembic/versions/2026/03/: 26_1516_40_8a94f111845d_initial_migration.py
tracker-service/migration/: env.py
tracker-service/src/: config.py  consumer_worker.py  di.py  producer_worker.py  worker.py
tracker-service/src/adapters/cleaners/: beautifulsoup_cleaner.py
tracker-service/src/adapters/hashers/: sha256_hasher.py
tracker-service/src/adapters/http_clients/: httpx_client.py
tracker-service/src/core/: config.py  deco_for_SQLAlchemy_exc.py  exceptions.py
tracker-service/src/db/base_model/: base.py
tracker-service/src/db/infrastructure/: __init__.py  session.py
tracker-service/src/db/models/: base.py  models.py
tracker-service/src/interfaces/: __init__.py  abstract_cleaner_repository.py  abstract_db_repository.py  abstract_hasher_repository.py  abstract_http_client_repository.py  abstract_site_service_interface.py  cleaner_interface.py  db_interface.py  hasher_interface.py  http_client_interface.py  rabbit_consumer_interface.py  site_service_interface.py  tracker_interface.py
tracker-service/src/rabbitmq/: __init__.py  rabbit_connection.py  rabbit_publisher.py  rabbitmq_consumer.py
tracker-service/src/site/: DTO.py  __init__.py  model.py  repository.py  schemas.py  service.py
tracker-service/src/tracker/: tracker.py
tracker-service/src/tracker/adapters/: __init__.py
tracker-service/src/tracker/adapters/cleaners/: beautifulsoup_cleaner.py
tracker-service/src/tracker/adapters/hashers/: sha256_hasher.py
tracker-service/src/tracker/adapters/http_clients/: httpx_client.py
