[project]
name = "api-service"
version = "0.1.0"
description = ""
authors = [{name = "disdreamq", email = "wlad050303@yandex.ru"}]
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.115.13,<0.116.0",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.34.3,<0.35.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1,<27.0.0",
    "mypy>=1.19.1,<2.0.0",
    "ruff>=0.15.6,<0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # PyCodeStyle errors
    "W",   # PyCodeStyle warnings
    "F",   # flake8
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "PERF", # perflint
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    ".",
]
