[project]
name = "tracker-service"
version = "0.1.0"
description = ""
authors = [{name = "disdreamq", email = "wlad050303@yandex.ru"}]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1,<0.29.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "sqlalchemy[asyncio]>=2.0.48,<3.0.0",
    "alembic>=1.18.4,<2.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "lxml>=6.0.2,<7.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.13.1,<3.0.0",
    "validators>=0.35.0,<0.36.0",
    "tenacity>=9.1.4,<10.0.0",
    "psycopg2>=2.9.11,<3.0.0",
    "aio-pika>=9.6.2,<10.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1,<27.0.0",
    "mypy>=1.19.1,<2.0.0",
    "ruff>=0.15.6,<0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # PyCodeStyle errors
    "W",   # PyCodeStyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "PERF", # perflint
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Also: "pep257", "numpy", or "google"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    ".",
]